--- a/.config/Code/settings.json
+++ b/.config/Code/settings.json
@@ -1,35 +1,83 @@
 {
-  "workbench.colorTheme": "Visual Studio Dark",
-  "workbench.iconTheme": "vscode-icons",
-  "editor.minimap.enabled": false,
-  "editor.formatOnSave": true,
-  "editor.rulers": [
-    79
-  ],
-  "editor.insertSpaces": false,
-  "editor.tabSize": 2,
-  "terminal.integrated.fontSize": 15,
-  "[python]": {
-    "editor.tabSize": 4
-  },
-  "python.languageServer": "Pylance",
-  //"emmet.includeLanguages": {
-  //  "javascript": "javascriptreact"
-  //},
-  "path-intellisense.absolutePathToWorkspace": false,
-  "prettier.jsxSingleQuote": true,
-  "prettier.singleQuote": true,
-  "prettier.useTabs": true,
-  "workbench.editorAssociations": {
-    "*.ipynb": "jupyter.notebook.ipynb"
-  },
-  "[markdown]": {
-    "editor.wordWrap": "on",
-    "editor.quickSuggestions": false,
-    "editor.insertSpaces": true
-  },
-  "workbench.startupEditor": "none"
-  // "prettier.disableLanguages": [
-  //   "vue, ejs"
-  // ]
+	"workbench.iconTheme": "vscode-icons",
+	"editor.minimap.enabled": false,
+	"editor.formatOnSave": true,
+	"editor.rulers": [80],
+	"editor.insertSpaces": false,
+	"editor.tabSize": 2,
+	"terminal.integrated.fontSize": 15,
+	"[python]": {
+		"editor.tabSize": 4
+	},
+	"python.languageServer": "Pylance",
+	//"emmet.includeLanguages": {
+	//  "javascript": "javascriptreact"
+	//},
+	"path-intellisense.absolutePathToWorkspace": false,
+	"prettier.jsxSingleQuote": true,
+	"prettier.singleQuote": true,
+	"prettier.useTabs": true,
+	"workbench.editorAssociations": {
+		"*.ipynb": "jupyter.notebook.ipynb"
+	},
+	"[markdown]": {
+		"editor.wordWrap": "on",
+		"editor.quickSuggestions": false,
+		"editor.insertSpaces": true
+	},
+	"workbench.startupEditor": "none",
+	// "prettier.disableLanguages": [
+	//   "vue, ejs"
+	// ]
+	// ----------------------------------
+	// Default Dart Extension Settings
+	// Causes the debug view to automatically appear when a breakpoint is hit. This
+	// setting is global and not configurable per-language.
+	"debug.openDebug": "openOnDebugBreak",
+
+	"[dart]": {
+		// Automatically format code on save and during typing of certain characters
+		// (like `;` and `}`).
+		"editor.formatOnSave": true,
+		"editor.formatOnType": true,
+
+		// Draw a guide line at 80 characters, where Dart's formatting will wrap code.
+		"editor.rulers": [80],
+
+		// Disables built-in highlighting of words that match your selection. Without
+		// this, all instances of the selected text will be highlighted, interfering
+		// with Dart's ability to highlight only exact references to the selected variable.
+		"editor.selectionHighlight": false,
+
+		// By default, VS Code prevents code completion from popping open when in
+		// "snippet mode" (editing placeholders in inserted code). Setting this option
+		// to `false` stops that and allows completion to open as normal, as if you
+		// weren't in a snippet placeholder.
+		"editor.suggest.snippetsPreventQuickSuggestions": false,
+
+		// By default, VS Code will pre-select the most recently used item from code
+		// completion. This is usually not the most relevant item.
+		//
+		// "first" will always select top item
+		// "recentlyUsedByPrefix" will filter the recently used items based on the
+		//     text immediately preceding where completion was invoked.
+		"editor.suggestSelection": "first",
+
+		// Allows pressing <TAB> to complete snippets such as `for` even when the
+		// completion list is not visible.
+		"editor.tabCompletion": "onlySnippets",
+
+		// By default, VS Code will populate code completion with words found in the
+		// current file when a language service does not provide its own completions.
+		// This results in code completion suggesting words when editing comments and
+		// strings. This setting will prevent that.
+		"editor.wordBasedSuggestions": false
+	},
+	"[html]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"editor.bracketPairColorization.enabled": true,
+	"terminal.integrated.commandsToSkipShell": ["language-julia.interrupt"],
+	"julia.symbolCacheDownload": true,
+	"julia.enableTelemetry": true
 }
