Fixing .gitconfig location, missing libncurses5-dev for Vim and changing some VSCode settings

--- a/.config/Code/settings.json
+++ b/.config/Code/settings.json
@@ -79,5 +79,6 @@
 	"editor.bracketPairColorization.enabled": true,
 	"terminal.integrated.commandsToSkipShell": ["language-julia.interrupt"],
 	"julia.symbolCacheDownload": true,
-	"julia.enableTelemetry": true
+	"julia.enableTelemetry": true,
+	"editor.acceptSuggestionOnEnter": "off"
 }
